--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,6 +38,9 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: build
+      - name: Update Firebase Configuration
+        run: |
+          sed -i 's/"public": "build"/"public": "."/' firebase.json
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
